--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.12.1",
     "next": "14.2.1",
     "react": "^18",
+    "react-autosave": "^0.4.4",
     "react-dom": "^18"
   },
   "devDependencies": {
