--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-autosave": "^0.4.4",
     "react-dom": "^18",
     "recharts": "^2.12.6",
+    "vite-tsconfig-paths": "^4.3.2",
     "zod": "^3.23.4"
   },
   "devDependencies": {
